# nu_plugin_plot

./: .gitignore  Cargo.toml  GEMINI.md  gemini_error.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  update_conductor_setup.md  workflow.md
conductor/archive/bump_nushell_0_113_1_20260604/: index.md  plan.md  spec.md
conductor/archive/bump_nushell_20260301/: spec.md
conductor/archive/cleanup_gitignore_20260301/: plan (2).md  plan.md  spec.md
conductor/archive/integrate_guidelines_20260301/: metadata.json
conductor/archive/nu_update_0113_20260523/: metadata.json
conductor/archive/update_nushell_20260412/: index.md  spec.md
conductor/archive/update_nushell_20260416/: index.md  plan.md  spec.md
conductor/archive/weather_fix_20260524/: index.md  metadata.json  spec.md
conductor/code_styleguides/: general.md
conductor/tracks/bump_nushell_0_113_1_20260604/: metadata.json  plan.md
conductor/tracks/bump_nushell_20260301/: index.md  metadata.json  plan.md
conductor/tracks/cleanup_gitignore_20260301/: index.md  metadata.json  plan.md
conductor/tracks/integrate_guidelines_20260301/: index.md  plan.md  spec.md
conductor/tracks/nu_update_0113_20260523/: index.md  plan.md  spec.md
conductor/tracks/update_nushell_20260412/: metadata.json  plan.md
conductor/tracks/update_nushell_20260416/: metadata.json  plan.md
conductor/tracks/weather_fix_20260524/: plan.md
src/: lib.rs
src/color_plot/: drawille.rs
src/color_plot/textplots/: mod.rs  scale.rs  utils.rs
tests/: functional.rs
